Restore stock radio and source subsystems